# feather

./: .bazelrc  .clang-format  .clangd  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  CMakeUserPreset.json  MODULE.bazel  README.md
.github/workflows/: ci.yml
core/: engine.cpp  engine.h  launch_settings.cpp  launch_settings.h  main.cpp  main.h  settings.cpp  settings.h  static_string.hpp  window.cpp  window.h
src/: BUILD
toolchains/: BUILD  README  cc_toolchain_config.bzl  compiler_detection.bzl  toolchain_helper.bzl
tools/: options.cmake
