module(
    name = "feather_engine",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.8")
bazel_dep(name = "rules_foreign_cc", version = "0.15.0")
# bazel_dep(name = "rules_python", version = "0.0.1")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "0e990032f3c5a866e72615cf67e5ce22186dcb97",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load_conan_dependencies = use_extension("//thirdparty/conan:conan_deps_module_extension.bzl", "conan_extension")
use_repo(load_conan_dependencies, "opengl", "sdl")
